// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule attr-case configured with "lowercase" smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/attr-case.html",
    "messages": Array [
      Object {
        "column": 4,
        "line": 2,
        "message": "Attribute \\"ID\\" should be lowercase",
        "ruleId": "attr-case",
        "severity": 2,
      },
      Object {
        "column": 4,
        "line": 3,
        "message": "Attribute \\"clAss\\" should be lowercase",
        "ruleId": "attr-case",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;

exports[`rule attr-case configured with "uppercase" smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/attr-case.html",
    "messages": Array [
      Object {
        "column": 4,
        "line": 1,
        "message": "Attribute \\"id\\" should be uppercase",
        "ruleId": "attr-case",
        "severity": 2,
      },
      Object {
        "column": 4,
        "line": 3,
        "message": "Attribute \\"clAss\\" should be uppercase",
        "ruleId": "attr-case",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;
